style<CommitViewer>: default color for avatar mask

--- a/src/UI/CommitViewer.xaml
+++ b/src/UI/CommitViewer.xaml
@@ -43,7 +43,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Border Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" x:Name="authorAvatarMask"  Width="64" Height="64" HorizontalAlignment="Right" Background="Gray">
-                            <Path Style="{StaticResource Style.Icon}" Width="56" Height="56" Data="{StaticResource Icon.User}" VerticalAlignment="Bottom"/>
+                            <Path Style="{StaticResource Style.Icon}" Fill="White" Width="56" Height="56" Data="{StaticResource Icon.User}" VerticalAlignment="Bottom"/>
                         </Border>
 
                         <Image Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" Width="64" Height="64" x:Name="authorAvatar" HorizontalAlignment="Right"/>
@@ -70,7 +70,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Border Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" x:Name="committerAvatarMask" Width="64" Height="64" HorizontalAlignment="Right" Background="Gray">
-                            <Path Style="{StaticResource Style.Icon}" Width="56" Height="56" Data="{StaticResource Icon.User}" VerticalAlignment="Bottom"/>
+                            <Path Style="{StaticResource Style.Icon}" Fill="White" Width="56" Height="56" Data="{StaticResource Icon.User}" VerticalAlignment="Bottom"/>
                         </Border>
 
                         <Image Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" Width="64" Height="64" x:Name="committerAvatar" HorizontalAlignment="Right"/>
