style<WorkingCopy>: change label for files display mode

--- a/src/UI/FilesDisplayModeSwitch.xaml
+++ b/src/UI/FilesDisplayModeSwitch.xaml
@@ -21,19 +21,19 @@
         <Button Click="OpenModeSelector" ToolTip="CHANGE FILES DISPLAY MODE" Margin="4,0">
             <Button.ContextMenu>
                 <ContextMenu x:Name="selector" Placement="Bottom" StaysOpen="False" Focusable="True">
-                    <MenuItem Header="Show As Grid" Click="UseGrid">
+                    <MenuItem Header="Show as Grid" Click="UseGrid">
                         <MenuItem.Icon>
                             <Path Style="{StaticResource Style.Icon.DisplayMode}" Data="{StaticResource Icon.Grid}"/>
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Header="Show As List" Click="UseList">
+                    <MenuItem Header="Show as List" Click="UseList">
                         <MenuItem.Icon>
                             <Path Style="{StaticResource Style.Icon.DisplayMode}" Data="{StaticResource Icon.List}"/>
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Header="Show As Tree" Click="UseTree">
+                    <MenuItem Header="Show as Tree" Click="UseTree">
                         <MenuItem.Icon>
                             <Path Style="{StaticResource Style.Icon.DisplayMode}" Data="{StaticResource Icon.Tree}"/>
                         </MenuItem.Icon>
