--- a/src/UI/Dashboard.xaml
+++ b/src/UI/Dashboard.xaml
@@ -7,8 +7,7 @@
              xmlns:local="clr-namespace:SourceGit.UI"
              xmlns:converters="clr-namespace:SourceGit.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Unloaded="Cleanup">
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <RoutedUICommand x:Key="OpenSearchBarCommand" Text="OpenSearchBar"/>
         <RoutedUICommand x:Key="HideSearchBarCommand" Text="HideSearchBar"/>
