--- a/src/UI/Stashes.xaml
+++ b/src/UI/Stashes.xaml
@@ -7,8 +7,7 @@
              xmlns:git="clr-namespace:SourceGit.Git"
              xmlns:converters="clr-namespace:SourceGit.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Unloaded="Cleanup">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="{StaticResource Brush.BG3}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
