feature<*>: upgrade to .NET 5.0; use System.Text.Json instead of System.Xml; supports auto check update at startup

--- a/src/UI/Launcher.xaml
+++ b/src/UI/Launcher.xaml
@@ -10,7 +10,7 @@
         Title="Source Git"
         Width="{Binding Source={x:Static source:App.Preference}, Path=UIMainWindowWidth, Mode=TwoWay}"
         Height="{Binding Source={x:Static source:App.Preference}, Path=UIMainWindowHeight, Mode=TwoWay}"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterOwner">
 
     <!-- Enable WindowChrome Feature -->
     <WindowChrome.WindowChrome>
