--- a/src/UI/About.xaml
+++ b/src/UI/About.xaml
@@ -1,5 +1,4 @@
 <Window x:Class="SourceGit.UI.About"
-        x:Name="me"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -67,7 +66,7 @@
                 </StackPanel>
 
                 <Label Grid.Row="1" Content="SourceGit - OPEN SOURCE GIT CLIENT" HorizontalContentAlignment="Center" VerticalContentAlignment="Bottom" FontSize="18" FontWeight="Bold"/>
-                <Label Grid.Row="2" Content="{Binding ElementName=me, Path=Version}" HorizontalContentAlignment="Center" FontSize="11"/>
+                <Label Grid.Row="2" x:Name="version" HorizontalContentAlignment="Center" FontSize="11"/>
 
                 <Label Grid.Row="3" HorizontalContentAlignment="Center" FontSize="11">
                     <Hyperlink RequestNavigate="OpenSource" NavigateUri="https://gitee.com/sourcegit/SourceGit.git">
